--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"lucide-svelte": "^0.132.0"
+		"@nanostores/persistent": "^0.7.0",
+		"lucide-svelte": "^0.132.0",
+		"nanostores": "^0.7.4"
 	}
 }
