--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"@nanostores/persistent": "^0.7.0",
+		"crypto-js": "^4.1.1",
 		"lucide-svelte": "^0.132.0",
 		"nanostores": "^0.7.4"
 	}
