--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
@@ -38,6 +39,7 @@
 		"@nanostores/persistent": "^0.7.0",
 		"crypto-js": "^4.1.1",
 		"lucide-svelte": "^0.132.0",
-		"nanostores": "^0.7.4"
+		"nanostores": "^0.7.4",
+		"svelte-spa-router": "^3.3.0"
 	}
 }
