--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "mutiny-music-svelte",
-	"version": "0.0.1",
+	"version": "0.2.1",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev --port 3000 --host",
+		"prebuild": "svelte-sitemap --domain https://server.deagustin.com",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "vite preview --port 3999 --host",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"test": "playwright test",
@@ -16,7 +17,6 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
@@ -29,6 +29,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.58.0",
 		"svelte-check": "^3.0.1",
+		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0",
