--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@nanostores/persistent": "^0.7.0",
+		"@sveltejs/adapter-netlify": "^2.0.7",
 		"crypto-js": "^4.1.1",
 		"howler": "^2.2.3",
 		"lucide-svelte": "^0.132.0",
