--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"sass": "^1.66.1",
 		"svelte": "^3.58.0",
 		"svelte-check": "^3.0.1",
+		"svelte-preprocess": "^5.0.4",
 		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.1",
 		"typescript": "^5.0.0",
