--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
+		"@tanstack/svelte-query-devtools": "5.0.0-alpha.29",
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -40,6 +41,7 @@
 	"type": "module",
 	"dependencies": {
 		"@nanostores/persistent": "^0.7.0",
+		"@tanstack/svelte-query": "^4.33.0",
 		"crypto-js": "^4.1.1",
 		"howler": "^2.2.3",
 		"lucide-svelte": "^0.132.0",
