--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"type": "module",
 	"dependencies": {
 		"@nanostores/persistent": "^0.7.0",
+		"@sveltejs/svelte-virtual-list": "^3.0.1",
 		"crypto-js": "^4.1.1",
 		"howler": "^2.2.3",
 		"lucide-svelte": "^0.132.0",
