--- a/.github/workflows/build.js.yml
+++ b/.github/workflows/build.js.yml
@@ -27,19 +27,23 @@ jobs:
     - uses: pnpm/action-setup@v2
       with:
         version: 8
+
     - name: Install dependences Svelte - Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
+
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
+
     - name: Build Svelte - Node.js ${{ matrix.node-version }}
       run: pnpm run build
 
     - uses: montudor/action-zip@v1
       with:
-        args: zip -qq -r mutiny-nginx-dist-${{ github.ref }}.zip dist
+        args: zip -qq -r mutiny-nginx-dist.zip dist
+
     - name: Create Release - Node.js ${{ matrix.node-version }}
       uses: svenstaro/upload-release-action@v2
       with:
