--- a/.github/workflows/build.js.yml
+++ b/.github/workflows/build.js.yml
@@ -42,7 +42,7 @@ jobs:
 
     - uses: montudor/action-zip@v1
       with:
-        args: zip -qq -r mutiny-nginx-dist.zip dist
+        args: zip -qq -r mutiny-nginx-dist.zip . -i dist
 
     - name: Create Release - Node.js ${{ matrix.node-version }}
       uses: svenstaro/upload-release-action@v2
