--- a/.github/workflows/build.js.yml
+++ b/.github/workflows/build.js.yml
@@ -48,7 +48,7 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: mutiny-nginx-dist-${{ github.ref }}.zip
+        file: mutiny-nginx-dist.zip
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
         body: |
