--- a/.github/workflows/build.js.yml
+++ b/.github/workflows/build.js.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-
+    permissions: write-all
     runs-on: ubuntu-latest
 
     strategy:
@@ -49,7 +49,7 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: mutiny-nginx-dist.zip
+        file: dist/mutiny-nginx-dist.zip
         release_name: Release ${{ github.ref }}
         body: |
             Description of release
