--- a/.github/workflows/build.js.yml
+++ b/.github/workflows/build.js.yml
@@ -43,13 +43,13 @@ jobs:
     - name: Zip dist folder
       uses: montudor/action-zip@v1
       with:
-        args: zip -qq -r MutinyNginxDist.zip . -i dist
+        args: zip -qq -r MutinyNginxDist.zip ./dist
 
     - name: Create Release - Node.js ${{ matrix.node-version }}
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: MutinyNginxDist.zip
-        release_name: Release ${{ github.ref }}
+        release_name: Release ${{ github.action_ref }}
         body: |
             Description of release
