--- a/.github/workflows/build.js.yml
+++ b/.github/workflows/build.js.yml
@@ -5,8 +5,8 @@ name: Create Release - Node.js
 
 on:
   push:
-    branches:
-      - "build/nginx-production"
+    # branches:
+    #   - "build/nginx-production"
     # Sequence of patterns matched against refs/tags
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
