--- a/.github/workflows/build.js.yml
+++ b/.github/workflows/build.js.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Zip dist folder
       uses: montudor/action-zip@v1
       with:
-        args: zip -qq -r MutinyNginxBuild.zip build
+        args: rm MutinyNginxBuild.zip && zip -qq -r MutinyNginxBuild.zip build
 
     - name: Create Release - Node.js ${{ matrix.node-version }}
       uses: svenstaro/upload-release-action@v2
