--- a/.github/workflows/build.js.yml
+++ b/.github/workflows/build.js.yml
@@ -43,13 +43,13 @@ jobs:
     - name: Zip dist folder
       uses: montudor/action-zip@v1
       with:
-        args: rm MutinyNginxBuild.zip && zip -qq -r MutinyNginxBuild.zip build
+        args: zip -qq -r MutinyNginxBuildV1.0.0.zip build
 
     - name: Create Release - Node.js ${{ matrix.node-version }}
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: MutinyNginxBuild.zip
+        file: MutinyNginxBuildV1.0.0.zip
         release_name: Release ${{ github.ref_name }}
         body: |
             Description of release
